demo/kubernetes/deployment-arm.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: demo-app
    spec:
      containers:
      - image: lowet84/k8s2019-demo:arm
        name: demo
        volumeMounts:
        - mountPath: /etc/hostname
          name: hostname
    volumes:
    - name: hostname
      hostPath:
        path: /etc/hostname
